--- a/main/index.html
+++ b/main/index.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 <p>Since Sept. 2023, I have been working as a Research Assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the guidance of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I worked as an R&amp;D Engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems in the field of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
 
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
-<br /> <b>Contact: jingwangli[at]outlook[dot]com</b>
+<br /> <b>Contact:</b> jingwangli[at]outlook[dot]com
 </p>
 </td></tr></table>
 <h2>News</h2>
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 <li><p>Sept. 2023, I joined CUHK-Shenzhen as a Research Assistant.
 </p>
 </li>
-<li><p>Sept. 2023, I resigned from FABU.AI, where I had the privilege of working alongside exceptional colleagues for over a year.
+<li><p>Sept. 2023, I resigned from FABU.AI.
 
 </p>
 </li>
@@ -59,7 +59,7 @@ MathJax.Hub.Config({
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : Master of Science, Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : Master of Engineering, Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
 </p>
 </li>
 <li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, Engineering Management, Huazhong Agricultural University
@@ -75,7 +75,7 @@ MathJax.Hub.Config({
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Inexact decentralized dual gradient tracking for constraint-coupled optimization&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;On the linear convergence of nested primal-dual gradient algorithm&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
@@ -130,7 +130,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-17 10:09:12 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-09-30 00:09:37 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
