--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>Since Sept. 2023, I have been working as a Research Assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the guidance of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I worked as an R&amp;D Engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems in the field of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
+<p>Since Sept. 2023, I have been working as a Research Assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the guidance of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I worked as an R&amp;D Engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems in the field of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
 
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 <br /> <b>Contact:</b> jingwangli[at]outlook[dot]com
@@ -60,14 +60,22 @@ MathJax.Hub.Config({
 <h2>Education</h2>
 <ul>
 <li><p>Sept. 2019 - Jun. 2022 : Master of Engineering, Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
+
+
 </p>
 </li>
-<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, Engineering Management, Huazhong Agricultural University
+<li><p>Sept. 2015 - Jun. 2019 : Huazhong Agricultural University
+</p>
+<ul>
+<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, Engineering Management
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology, Huazhong Agricultural University (<i>I switched to Engineering Management at the beginning of my sophomore year</i>)
+<li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology (<i>I switched to Engineering Management at the beginning of my sophomore year</i>)
 
 </p>
+</li>
+</ul>
+
 </li>
 </ul>
 <h2>Preprints</h2>
@@ -130,7 +138,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-30 00:09:37 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-03 10:38:07 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
