--- a/main/index.html
+++ b/main/index.html
@@ -80,10 +80,10 @@ MathJax.Hub.Config({
 </ul>
 <h2>Preprints</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Inexact decentralized dual gradient tracking for constraint-coupled optimization&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;On the linear convergence of nested primal-dual gradient algorithm&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
@@ -138,7 +138,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-03 10:38:07 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-05 22:27:52 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
