--- a/main/index.html
+++ b/main/index.html
@@ -123,7 +123,11 @@ MathJax.Hub.Config({
 </li>
 <li><p>Nov. 2017, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
 
-
+</p>
+</li>
+</ul>
+<p><div id="myMap" style="width: 100%;height:600px;"></div>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&cl=ffffff&w=a"></script>
 
 
 
@@ -134,11 +138,9 @@ MathJax.Hub.Config({
 
 
 </p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-07 12:38:24 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-12 22:18:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
