--- a/main/index.html
+++ b/main/index.html
@@ -126,8 +126,7 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
-<p><div id="myMap" style="width: 100%;height:600px;"></div>
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&cl=ffffff&w=a"></script>
+<p><a href="https://clustrmaps.com/site/1bwx0"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&cl=ffffff" /></a>
 
 
 
@@ -140,7 +139,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-12 22:18:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-12 22:36:40 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
