--- a/main/index.html
+++ b/main/index.html
@@ -126,6 +126,22 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
+<h2>Academic Services</h2>
+<ul>
+<li><p>Reviewer of
+</p>
+<ul>
+<li><p>IEEE Transactions on Control of Network Systems
+</p>
+</li>
+<li><p>IEEE Transactions on Systems, Man and Cybernetics: Systems
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <p><a href="https://clustrmaps.com/site/1bwx0"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&cl=ffffff" /></a>
 
 
@@ -139,7 +155,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-12 22:36:40 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-01 14:08:27 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
