--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>Since Sept. 2023, I have been working as an Research Assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Dr. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I worked as an R&amp;D Engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems in the field of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
+<p>Since Sept. 2023, I have been an Research Assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I was an Algorithm Engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
 
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 <br /> <b>Contact:</b> jingwangli[at]outlook[dot]com
@@ -42,10 +42,13 @@ MathJax.Hub.Config({
 </td></tr></table>
 <h2>News</h2>
 <ul>
-<li><p>Sept. 2023, I began my role as an Research Assistant at CUHK-Shenzhen.
+<li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>!
 </p>
 </li>
-<li><p>Sept. 2023, I resigned from FABU.AI.
+<li><p>Sept. 2023: I has been an Research Assistant at CUHK-Shenzhen.
+</p>
+</li>
+<li><p>Sept. 2023: I left FABU.AI.
 
 </p>
 </li>
@@ -83,9 +86,6 @@ MathJax.Hub.Config({
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
-</p>
-</li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 
 </p>
@@ -93,6 +93,9 @@ MathJax.Hub.Config({
 </ol>
 <h2>Publications</h2>
 <ol>
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i> (<b>accepted and in press</b>), 2023. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</p>
+</li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
@@ -155,7 +158,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-03 15:01:46 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-12-23 23:50:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
