--- a/main/index.html
+++ b/main/index.html
@@ -42,7 +42,7 @@ MathJax.Hub.Config({
 </td></tr></table>
 <h2>News</h2>
 <ul>
-<li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>!
+<li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>.
 </p>
 </li>
 <li><p>Sept. 2023: I has been a research assistant at CUHK-Shenzhen.
@@ -62,7 +62,7 @@ MathJax.Hub.Config({
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : Master of Engineering, Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : Master of Engineering in Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
 
 
 </p>
@@ -70,7 +70,7 @@ MathJax.Hub.Config({
 <li><p>Sept. 2015 - Jun. 2019 : Huazhong Agricultural University
 </p>
 <ul>
-<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, Engineering Management
+<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management in Engineering Management
 </p>
 </li>
 <li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology (<i>I switched to Engineering Management in the second year</i>)
@@ -93,7 +93,7 @@ MathJax.Hub.Config({
 </ol>
 <h2>Publications</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, <b>accepted and in press</b>. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>&ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2024. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
@@ -158,7 +158,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-28 14:47:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-17 17:13:54 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
