--- a/main/index.html
+++ b/main/index.html
@@ -23,6 +23,7 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="cv.html">CV</a></div>
 <div class="menu-item"><a href="https://blog.jingwang.site" target="blank">Blog</a></div>
 </td>
 <td id="layout-content">
@@ -33,19 +34,26 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><h2>About</h2>
-<p>Since Sept. 2023, I have been a research assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
+<td align="left"><p>Research Assistant,
+<br /> School of Date Science,
+<br /> The Chinese University of Hong Kong, Shenzhen
+<br /> Shenzhen, China
 
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 <br /> <b>Contact:</b> jingwangli[at]outlook[dot]com
 </p>
 </td></tr></table>
+<h2>About</h2>
+<p>Since Sept. 2023, I have been a research assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems related to autonomous driving. Prior to that, I pursued my Master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my Bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
+
+
+</p>
 <h2>News</h2>
 <ul>
 <li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>.
 </p>
 </li>
-<li><p>Sept. 2023: I has been a research assistant at CUHK-Shenzhen.
+<li><p>Sept. 2023: I has become a research assistant at CUHKSZ.
 </p>
 </li>
 <li><p>Sept. 2023: I left FABU.AI.
@@ -54,33 +62,20 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <h2>Research Interests</h2>
-<p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am devoted to developing efficient and robust algorithms for a class of decentralized optimization problems with globally coupled constraints.
-
-
-
-
+<p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am interested in developing communication and computation efficient algorithms for a class of decentralized optimization problems with globally coupled constraints. Specifically speaking, consider a networked system composing of n agents, the network topology can be modeled by an undirected or directed graph, then the decentralized optimization problem is defined as
 </p>
-<h2>Education</h2>
-<ul>
-<li><p>Sept. 2019 - Jun. 2022 : Master of Engineering in Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
-
-
-</p>
-</li>
-<li><p>Sept. 2015 - Jun. 2019 : Huazhong Agricultural University
-</p>
-<ul>
-<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management in Engineering Management
-</p>
-</li>
-<li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology (<i>I switched to Engineering Management in the second year</i>)
+<p style="text-align:center">
+\[
+\begin{equation} \label{original_pro} \tag{P1}
+  \begin{aligned}
+    \min_{x_i \in \mathbb{R}^{d_i}} \  &amp; \sum_{i=1}^n f_i(x_i)    \\
+    \text{s.t.} \               &amp; \sum_{i=1}^{n}A_ix_i = b,
+  \end{aligned}
+\end{equation}
+\]
+</p><p>where \(f_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R}\) and \(A_i \in \mathbb{R}^{p \times d_i}\) are completely private for agent \(i\) and cannot be shared with its neighbors, while \(b \in \mathbb{R}^{p}\) is public for all agents.
 
 </p>
-</li>
-</ul>
-
-</li>
-</ul>
 <h2>Preprints</h2>
 <ol>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
@@ -107,28 +102,6 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ol>
-<h2>Awards</h2>
-<ul>
-<li><p>Jun. 2022, <a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong University of Science &amp; Technology</a>
-</p>
-</li>
-<li><p>Sept. 2019, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
-</p>
-</li>
-<li><p>Sept. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Outstanding Bachelor Degree Thesis of Huazhong Agricultural University</a>
-</p>
-</li>
-<li><p>Jun. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong Agricultural University</a>
-</p>
-</li>
-<li><p>Dec. 2017, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>Programming Contest of Huazhong Agricultural University, Second prize</a>
-</p>
-</li>
-<li><p>Nov. 2017, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
-
-</p>
-</li>
-</ul>
 <h2>Academic Services</h2>
 <ul>
 <li><p>Reviewer of
@@ -158,7 +131,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-17 17:13:54 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-19 14:25:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
