--- a/main/index.html
+++ b/main/index.html
@@ -44,7 +44,7 @@ MathJax.Hub.Config({
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>Since Sept. 2023, I have been a research assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems related to autonomous driving. Prior to that, I pursued my Master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my Bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
+<p>Since Sept. 2023, I have been a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems related to autonomous driving. Prior to that, I pursued my Master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my Bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
 
 
 </p>
@@ -53,10 +53,10 @@ MathJax.Hub.Config({
 <li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>.
 </p>
 </li>
-<li><p>Sept. 2023: I has become a research assistant at CUHKSZ.
+<li><p>Sept. 2023: I have become a research assistant at CUHKSZ.
 </p>
 </li>
-<li><p>Sept. 2023: I left FABU.AI.
+<li><p>Sept. 2023: I resigned from FABU.AI.
 
 </p>
 </li>
@@ -131,7 +131,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-19 14:25:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-19 19:52:07 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
