--- a/main/cv.html
+++ b/main/cv.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : Master of Engineering in Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : MPhil in Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
 
 
 </p>
@@ -42,7 +42,7 @@ MathJax.Hub.Config({
 <li><p>Sept. 2015 - Jun. 2019 : Huazhong Agricultural University
 </p>
 <ul>
-<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management in Engineering Management
+<li><p>Sept. 2016 - Jun. 2019 : BSc in Engineering Management
 </p>
 </li>
 <li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology (<i>I switched to Engineering Management in the second year</i>)
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-19 19:52:07 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-25 13:31:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
