--- a/main/index.html
+++ b/main/index.html
@@ -62,7 +62,7 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <h2>Research Interests</h2>
-<p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am interested in developing communication and computation efficient algorithms for a class of decentralized optimization problems with globally coupled constraints. Specifically speaking, consider a networked system composing of n agents, the network topology can be modeled by an undirected or directed graph, then the decentralized optimization problem is defined as
+<p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am interested in developing communication and computation efficient algorithms for a class of decentralized optimization problems with globally coupled constraints, which can cover many real-world engineering problems, such as vertical federated learning, distributed basis pursuit and distributed resource allocation. Specifically speaking, consider a networked system composing of n agents, the network topology can be modeled by an undirected or directed graph, then the decentralized optimization problem mentioned above is defined as
 </p>
 <p style="text-align:center">
 \[
@@ -131,7 +131,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-19 19:52:07 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-25 13:31:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
