--- a/main/cv.html
+++ b/main/cv.html
@@ -34,12 +34,12 @@ MathJax.Hub.Config({
 </div>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : MPhil in Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : MPhil in Control Science &amp; Engineering, <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>
 
 
 </p>
 </li>
-<li><p>Sept. 2015 - Jun. 2019 : Huazhong Agricultural University
+<li><p>Sept. 2015 - Jun. 2019 : <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>
 </p>
 <ul>
 <li><p>Sept. 2016 - Jun. 2019 : BSc in Engineering Management
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-25 13:31:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-26 15:47:14 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
