--- a/main/index.html
+++ b/main/index.html
@@ -40,12 +40,13 @@ MathJax.Hub.Config({
 <br /> Shenzhen, China
 
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
-<br /> <b>Contact:</b> jingwangli[at]outlook[dot]com
+<br /> <b>Contact:</b> jingwangli[at]outlook[dot]com (jingwangli[at]cuhk[dot]edu[dot]cn)
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>Since Sept. 2023, I have been a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where my research focuses on non-smooth decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems related to autonomous driving. Prior to that, I pursued my Master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my Bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
+<p>I am currently a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where I do research about decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I worked as an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I was engaged in modeling and solving optimization problems related to autonomous driving.
 
+
 
 </p>
 <h2>News</h2>
@@ -53,7 +54,7 @@ MathJax.Hub.Config({
 <li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>.
 </p>
 </li>
-<li><p>Sept. 2023: I have become a research assistant at CUHKSZ.
+<li><p>Sept. 2023: I have been a research assistant at CUHKSZ.
 </p>
 </li>
 <li><p>Sept. 2023: I resigned from FABU.AI.
@@ -62,18 +63,18 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <h2>Research Interests</h2>
-<p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am interested in developing communication and computation efficient algorithms for a class of decentralized optimization problems with globally coupled constraints, which can cover many real-world engineering problems, such as vertical federated learning, distributed basis pursuit and distributed resource allocation. Specifically speaking, consider a networked system composing of n agents, the network topology can be modeled by an undirected or directed graph, then the decentralized optimization problem mentioned above is defined as
+<p>My research interests primarily revolve around the theory and applications of decentralized optimization. Currently, I am particularly interested in developing communication and computation efficient algorithms to solve a class of decentralized optimization problems with globally coupled constraints. In this context, we usually consider a networked system consisting of \(n\) agents, and the underlying network topology can be represented by an undirected or directed graph. The problem of interest can be formulated as follows:
 </p>
 <p style="text-align:center">
 \[
-\begin{equation} \label{original_pro} \tag{P1}
+\begin{equation}
   \begin{aligned}
-    \min_{x_i \in \mathbb{R}^{d_i}} \  &amp; \sum_{i=1}^n f_i(x_i)    \\
-    \text{s.t.} \               &amp; \sum_{i=1}^{n}A_ix_i = b,
+    \min_{x_i \in \mathbb{R}^{d_i}, y \in \mathbb{R}^p} \  &amp; \sum_{i=1}^n \left(f_i(x_i) + g_i(x_i)\right) + h(y)   \\
+    \text{s.t.} \               &amp; \sum_{i=1}^{n}A_ix_i = y,
   \end{aligned}
-\end{equation}
+\end{equation} \label{original_pro}
 \]
-</p><p>where \(f_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R}\) and \(A_i \in \mathbb{R}^{p \times d_i}\) are completely private for agent \(i\) and cannot be shared with its neighbors, while \(b \in \mathbb{R}^{p}\) is public for all agents.
+</p><p>where \(f_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R}\), \(g_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R} \cup \{+\infty\}\) and \(A_i \in \mathbb{R}^{p \times d_i}\) are private for agent \(i\), while \(h:\mathbb{R}^p \rightarrow \mathbb{R} \cup \{+\infty\}\) is public for all agents. The problem \(\eqref{original_pro}\) captures a wide range of real-world scientific and engineering problems, including decentralized vertical federated learning, decentralized optimal transport, decentralized resource allocation, and more, which is exactly why I am so interested in it.
 
 </p>
 <h2>Preprints</h2>
@@ -131,7 +132,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-25 13:31:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-26 15:47:14 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
