--- a/main/index.html
+++ b/main/index.html
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
   \end{aligned}
 \end{equation} \label{original_pro}
 \]
-</p><p>where \(f_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R}\), \(g_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R} \cup \{+\infty\}\) and \(A_i \in \mathbb{R}^{p \times d_i}\) are private for agent \(i\), while \(h:\mathbb{R}^p \rightarrow \mathbb{R} \cup \{+\infty\}\) is public for all agents. The problem \(\eqref{original_pro}\) captures a wide range of real-world scientific and engineering problems, including decentralized vertical federated learning, decentralized optimal transport, decentralized resource allocation, and more, which is exactly why I am so interested in it.
+</p><p>where \(f_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R}\), \(g_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R} \cup \{+\infty\}\) and \(A_i \in \mathbb{R}^{p \times d_i}\) are private for agent \(i\), while \(h:\mathbb{R}^p \rightarrow \mathbb{R} \cup \{+\infty\}\) is public for all agents. The problem \(\eqref{original_pro}\) captures a wide range of real-world scientific and engineering problems, including decentralized vertical federated learning, decentralized optimal transport, decentralized resource allocation, and more, which is exactly why it appeals to me so much.
 
 </p>
 <h2>Preprints</h2>
@@ -119,7 +119,7 @@ MathJax.Hub.Config({
 
 </li>
 </ul>
-<p><a href="https://clustrmaps.com/site/1bwx0"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&cl=ffffff" /></a>
+<p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=500&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&co=2d78ad&ct=ffffff'/></a>
 
 
 
@@ -132,7 +132,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-26 15:47:14 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-26 21:22:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
