increase font-size

--- a/main/index.html
+++ b/main/index.html
@@ -44,7 +44,7 @@ MathJax.Hub.Config({
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>I am currently a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where I do research about decentralized optimization under the supervision of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I worked as an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I was engaged in modeling and solving optimization problems related to autonomous driving.
+<p>I am currently a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where I do research about decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I worked as an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I was engaged in modeling and solving optimization problems related to autonomous driving.
 
 
 
@@ -132,7 +132,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-26 21:22:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-29 15:42:18 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
