--- a/main/cv.html
+++ b/main/cv.html
@@ -18,15 +18,7 @@ MathJax.Hub.Config({
 <!-- End MathJax -->
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Menu</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="cv.html">CV</a></div>
-<div class="menu-item"><a href="https://blog.jingwang.site" target="blank">Blog</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>CV</h1>
 <div id="subtitle">
@@ -45,7 +37,7 @@ MathJax.Hub.Config({
 <li><p>Sept. 2016 - Jun. 2019 : BSc in Engineering Management
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology (<i>I switched to Engineering Management in the second year</i>)
+<li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology
 
 </p>
 </li>
@@ -86,11 +78,9 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-29 15:42:18 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Last updated on 2024-03-31.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
