--- a/main/index.html
+++ b/main/index.html
@@ -18,15 +18,7 @@ MathJax.Hub.Config({
 <!-- End MathJax -->
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Menu</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="cv.html">CV</a></div>
-<div class="menu-item"><a href="https://blog.jingwang.site" target="blank">Blog</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>Jingwang Li</h1>
 <div id="subtitle">
@@ -34,19 +26,23 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p>Research Assistant,
-<br /> School of Date Science,
-<br /> The Chinese University of Hong Kong, Shenzhen
-<br /> Shenzhen, China
+<td align="left"><p><b>Research Assistant</b>,<br />
+School of Date Science,<br />
+The Chinese University of Hong Kong, Shenzhen<br />
+Shenzhen, China<br /><br />
+
+<b>Email</b>: jingwangli[at]outlook[dot]com<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli[at]cuhk[dot]edu[dot]cn<br />
+<b>Links</b>: <a href="https://blog.jingwang.site" target=&ldquo;blank&rdquo;>Blog</a> | <a href="cv.html" target=&ldquo;blank&rdquo;>CV</a><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 
-<br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
-<br /> <b>Contact:</b> jingwangli[at]outlook[dot]com (jingwangli[at]cuhk[dot]edu[dot]cn)
+
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>I am currently a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen (CUHKSZ)</a>, where I do research about decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I worked as an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I was engaged in modeling and solving optimization problems related to autonomous driving.
+<p>I am currently a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a>, where I do research about decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I worked as an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I was engaged in modeling and solving optimization problems related to autonomous driving.<br />
 
-
+Before that, I received a BSc in Engineering Management in 2019 from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering in 2022 under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
 
 </p>
 <h2>News</h2>
@@ -79,26 +75,26 @@ MathJax.Hub.Config({
 </p>
 <h2>Preprints</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 
 </p>
 </li>
 </ol>
 <h2>Publications</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>&ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2024. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2024. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. <a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>&ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;</a>, <i>Applied Mathematics and Computation</i>, 2023.
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation</i>, 2023. [<a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>DOI</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. <a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>&ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;</a>, <i>International Conference on Guidance, Navigation and Control</i>, 2022.
+<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>International Conference on Guidance, Navigation and Control</i>, 2022. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
 
 </p>
 </li>
@@ -113,13 +109,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>IEEE Transactions on Systems, Man and Cybernetics: Systems
 
-</p>
-</li>
-</ul>
 
-</li>
-</ul>
-<p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=500&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&co=2d78ad&ct=ffffff'/></a>
 
 
 
@@ -130,13 +120,16 @@ MathJax.Hub.Config({
 
 
 </p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-29 15:42:18 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Last updated on 2024-03-31.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
