change map to js

--- a/main/index.html
+++ b/main/index.html
@@ -26,10 +26,10 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p><b>Research Assistant</b>,<br />
+<td align="left"><p><i>Research Assistant</i><br />
 School of Date Science,<br />
 The Chinese University of Hong Kong, Shenzhen<br />
-Shenzhen, China<br /><br />
+Shenzhen, China<br />
 
 <b>Email</b>: jingwangli[at]outlook[dot]com<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli[at]cuhk[dot]edu[dot]cn<br />
@@ -104,10 +104,12 @@ Before that, I received a BSc in Engineering Management in 2019 from <a href="ht
 <li><p>Reviewer of
 </p>
 <ul>
-<li><p>IEEE Transactions on Control of Network Systems
+<li><p><i>IEEE Transactions on Control of Network Systems</i>
 </p>
 </li>
-<li><p>IEEE Transactions on Systems, Man and Cybernetics: Systems
+<li><p><i>IEEE Transactions on Systems, Man and Cybernetics: Systems</i>
+
+
 
 </p>
 </li>
@@ -115,20 +117,14 @@ Before that, I received a BSc in Engineering Management in 2019 from <a href="ht
 
 </li>
 </ul>
-<p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=500&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&co=2d78ad&ct=ffffff'/></a>
-
-
-
-
-
-
+<p><div id="myMap" style="width: 100%;height:600px;"></div> <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg'></script>
 
 
 
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-03-31.
+Last updated on 2024-04-01.
 </div>
 </div>
 </div>
