change map to image

--- a/main/index.html
+++ b/main/index.html
@@ -31,8 +31,8 @@ School of Date Science,<br />
 The Chinese University of Hong Kong, Shenzhen<br />
 Shenzhen, China<br />
 
-<b>Email</b>: jingwangli[at]outlook[dot]com<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli[at]cuhk[dot]edu[dot]cn<br />
+<b>Email</b>: jingwangli [at] outlook.com<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jingwangli [at] cuhk.edu.cn<br />
 <b>Links</b>: <a href="https://blog.jingwang.site" target=&ldquo;blank&rdquo;>Blog</a> | <a href="cv.html" target=&ldquo;blank&rdquo;>CV</a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 
@@ -109,15 +109,15 @@ Before that, I received a BSc in Engineering Management in 2019 from <a href="ht
 </li>
 <li><p><i>IEEE Transactions on Systems, Man and Cybernetics: Systems</i>
 
-
-
 </p>
 </li>
 </ul>
 
 </li>
 </ul>
-<p><div id="myMap" style="width: 100%;height:600px;"></div> <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg'></script>
+<p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=400&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg'/></a>
+
+
 
 
 
