--- a/main/index.html
+++ b/main/index.html
@@ -40,9 +40,9 @@ Shenzhen, China<br />
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>I am currently a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a>, where I do research about decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I worked as an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I was engaged in modeling and solving optimization problems related to autonomous driving.<br />
+<p>In the fall of 2024, I will start pursuing my PhD in Electronic and Computer Engineering at <a href="https://hkust.edu.hk/" target=&ldquo;blank&rdquo;>the Hong Kong University of Science &amp; Technology</a>. Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.<br />
 
-Before that, I received a BSc in Engineering Management in 2019 from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering in 2022 under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
+Before that, I received a BSc in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
 
 </p>
 <h2>News</h2>
@@ -124,7 +124,7 @@ Before that, I received a BSc in Engineering Management in 2019 from <a href="ht
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-01.
+Last updated on 2024-04-03.
 </div>
 </div>
 </div>
