--- a/main/index.html
+++ b/main/index.html
@@ -40,8 +40,7 @@ Shenzhen, China<br />
 </p>
 </td></tr></table>
 <h2>About</h2>
-<p>In the fall of 2024, I will start pursuing my PhD in Electronic and Computer Engineering at <a href="https://hkust.edu.hk/" target=&ldquo;blank&rdquo;>The Hong Kong University of Science &amp; Technology</a>. Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.<br />
-
+<p>Currently, I am a research assistant at <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong, Shenzhen</a>, working on decentralized optimization under the supervision of <a href="https://scholar.google.com/citations?user=WkRojboAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. Previously, I was an algorithm engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, engaging in modeling and solving optimization problems related to autonomous driving.
 Before that, I received a BSc in Engineering Management from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a> and an MPhil in Control Science &amp; Engineering under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a> from <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>.
 
 </p>
@@ -50,7 +49,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 <li><p>Dec. 2023: Our work &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo; has been accepted by <i>IEEE Transactions on Control of Network Systems</i>.
 </p>
 </li>
-<li><p>Sept. 2023: I have been a research assistant at CUHKSZ.
+<li><p>Sept. 2023: I have been an RA at CUHKSZ.
 </p>
 </li>
 <li><p>Sept. 2023: I resigned from FABU.AI.
@@ -74,7 +73,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 
 </p>
 <h2>Publications</h2>
-<p>* indicates the corresponding author
+<p>* indicates the corresponding author.
 
 </p>
 <h3>Preprints</h3>
@@ -89,23 +88,23 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </ol>
 <h3>Journal Papers</h3>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2024</i>. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2024. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation, 2023</i>. [<a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>DOI</a>]
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation</i>, 2023. [<a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>DOI</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2022</i>. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 
 </p>
 </li>
 </ol>
 <h3>Conference Papers</h3>
 <ol>
-<li><p>Bingxi Jia*, Haidong Ren, Zheng Yang, <b>Jingwang Li</b> and Xiaofei He. &ldquo;Cascaded motion estimation for intelligent vehicles in GNSS-denied scenes&rdquo;, <i>CCC 2023</i>. [<a href="https://doi.org/10.23919/CCC58697.2023.10239725" target=&ldquo;blank&rdquo;>DOI</a>]
+<li><p>Bingxi Jia*, Haidong Ren, Zheng Yang, <b>Jingwang Li</b> and Xiaofei He. &ldquo;Cascaded motion estimation for intelligent vehicles in GNSS-denied scenes&rdquo;, <i>Chinese Control Conference</i>, 2023. [<a href="https://doi.org/10.23919/CCC58697.2023.10239725" target=&ldquo;blank&rdquo;>DOI</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>ICGNC 2022</i>. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
+<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>International Conference on Guidance, Navigation and Control</i>, 2022. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
 
 </p>
 </li>
@@ -135,7 +134,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-08.
+Last updated on 2024-04-09.
 </div>
 </div>
 </div>
